# PractiseRender

./: CMakeLists.txt
src/: Application.cpp  Application.h  Framebuffer.h  InputCodes.h  Main.cpp  Matrix.cpp  Matrix.h  Renderer.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h  vector.cpp  vector.h
src/RGS/: Application.cpp  Application.h  Base.h  Framebuffer.cpp  Framebuffer.h  Main.cpp  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  vector.cpp  vector.h
src/Shader/: BlinnShader.cpp  BlinnShader.h  ShaderBase.h
src/stb-master/: stb_image.h
